codes, imgs, search

--- a/FirmaKurierska/Content/bootstrap.css
+++ b/FirmaKurierska/Content/bootstrap.css
@@ -593,6 +593,7 @@ ol ol {
 
 dl {
   margin-bottom: 20px;
+  background-color: rgba(255,255,255,1)
 }
 
 dt,
@@ -4934,12 +4935,12 @@ a.list-group-item.active > .badge,
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
-  background-color: #eeeeee;
+  background-color: rgba(0,0,0,0.5);
 }
 
 .jumbotron h1 {
   line-height: 1;
-  color: inherit;
+  color: rgba(0,0,0,0.5);
 }
 
 .jumbotron p {
