--- a/FirmaKurierska/Content/Site.css
+++ b/FirmaKurierska/Content/Site.css
@@ -7,6 +7,7 @@
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+    background-color: rgba(255,255,255,0.5)
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
